test/Fail/ParseErrorDoubleDot.err
ParseErrorDoubleDot.agda:6.5-8: error: [SyntaxError]
Syntax error: unexpected '..'
when scope checking ..x
